--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -300,6 +300,22 @@
                 <div class="team-item">
                     <div class="row g-0 bg-light rounded overflow-hidden">
                         <div class="col-12 col-sm-5 h-100">
+                            <img class="img-fluid h-100" src="../static/images/fatty_liver.jpg" style="object-fit: cover;">
+                        </div>
+                        <div class="col-12 col-sm-7 h-100 d-flex flex-column">
+                            <div class="mt-auto p-4">
+                                <h3>Fatty_Liver Disease Prediction</h3>
+                                <p class="m-0">Take control of your fatty liver health—early action makes all the difference.</p>
+                            </div>
+                            <div class="d-flex mt-auto border-top p-4">
+                                <a href="/fatty_liver" class="btns">Check Now</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="team-item">
+                    <div class="row g-0 bg-light rounded overflow-hidden">
+                        <div class="col-12 col-sm-5 h-100">
                             <img class="img-fluid h-100" src="../static/images/fever.avif" style="object-fit: cover;">
                         </div>
                         <div class="col-12 col-sm-7 h-100 d-flex flex-column">
