--- a/templates/home.html
+++ b/templates/home.html
@@ -307,6 +307,23 @@
                 </a>
             </div>
         </div>
+        
+        <div class="col d-flex align-items-start">
+            <div
+                class="icon-square text-body-emphasis bg-body-secondary d-inline-flex align-items-center justify-content-center fs-4 flex-shrink-0 me-3">
+                <svg class="bi" width="1em" height="1em">
+                    <image width="1em" height="1em" href="../static/images/fatty_liver_icon.jpg" />
+                </svg>
+            </div>
+            <div>
+                <h3 class="fs-2 text-body-emphasis font-serif">Fatty_Liver Classification</h3>
+                <p>Our fatty liver prediction system analyzes vital health indicators like liver enzyme levels, BMI, and blood sugar to accurately assess the severity of fatty liver disease.</p>
+                <a href="#" class="btn btn-primary">
+                    Explore
+                </a>
+            </div>
+        </div>
+
         <div class="col d-flex align-items-start">
             <div
                 class="icon-square text-body-emphasis bg-body-secondary d-inline-flex align-items-center justify-content-center fs-4 flex-shrink-0 me-3">
@@ -410,6 +427,15 @@
                             </div>
                             <div class="position-relative bg-light rounded-bottom text-center p-4">
                                 <h5 class="m-0">Typhoid Disease Prediction</h5>
+                            </div>
+                        </div>
+                        <div class="col-md-4 service-item wow zoomIn" data-wow-delay="0.12s">
+                            <div class="rounded-top overflow-hidden">
+                                <img class="img-fluid" src="../static/images/fatty_liver_home.jpg" alt=""
+                                    style="object-fit: cover; height: 250px; width: 100%;">
+                            </div>
+                            <div class="position-relative bg-light rounded-bottom text-center p-4">
+                                <h5 class="m-0">Fatty_Liver_classification</h5>
                             </div>
                         </div>
                     </div>
